@@ -22976,7 +22976,7 @@ static const uint8_t compiler_with_library_image[] = {
 0x3,0xe,0x21,0x11,0x6,0xe,0x5b,0x11,0x1,0xe,0x62,0x11,0x2,0x11,0x1,
 0xe,0x42,0x11,0x12,0xe,0x21,0x11,0x6,0xe,0x5b,0x11,0x0,0xe,0x62,0x11,
 0x2,0x11,0x1,0xe,0x42,0x11,0x5,0xe,0x1a,0x10,0x0,0x0,0x0,0x0,0x0,
-0x0,0xf8,0xff,0xe,0x3d,0x11,0x2,0xe,0x1a,0x10,0x0,0x0,0x0,0x0,0x0,
+0x0,0xf8,0x7f,0xe,0x3d,0x11,0x2,0xe,0x1a,0x10,0x0,0x0,0x0,0x0,0x0,
 0x0,0x0,0x0,0xe,0x3d,0x11,0x2,0xe,0x5c,0x11,0x0,0x11,0x0,0xe,0x6,
 0x11,0x5,0xe,0x3b,0x11,0x0,0xe,0x3d,0x11,0x2,0xe,0x5b,0x11,0x0,0xe,
 0x3b,0x11,0x1,0xe,0x6,0x11,0x8,0xe,0x5b,0x11,0x0,0xe,0x3b,0x11,0x1,
