@@ -46,12 +46,21 @@ Format: 1.4
 # --------------------------------------------------------------------------
 
 
-File: About  (no auto-title, doc/text/About.txt)
-File: Database independent interface  (lib/mosh/dbi.ss)
-File: Download  (doc/text/Download.txt)
-File: Foreign Function Interface  (lib/mosh/ffi.ss)
-File: Pretty Printing  (lib/mosh/pp.ss)
-File: Unit Testing  (lib/mosh/test.ss)
+Group: Doc  {
+
+   File: About  (no auto-title, doc/text/About.txt)
+   File: Download  (doc/text/Download.txt)
+   }  # Group: Doc
+
+Group: Lib  {
+
+   File: &lparen;system&rparen;  (doc/text/System.txt)
+   File: Database independent interface  (lib/mosh/dbi.ss)
+   File: Foreign Function Interface  (lib/mosh/ffi.ss)
+   File: Pretty Printing  (lib/mosh/pp.ss)
+   File: Process  (lib/mosh/process.ss)
+   File: Unit Testing  (lib/mosh/test.ss)
+   }  # Group: Lib
 
 Group: Index  {
 
