@@ -29982,5 +29982,65 @@ static const uint8_t psyntax_image[] = {
 0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
 0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
 0x29,0xe,0x29,0xe,0x29,0xe,0x3a,0x1,0x33,0x18,0x0,0x0,0xe,0x53,0x9,
-0xe,0xa,0xe,0xf,0x1,0x33,0x18,0x0,0x0,0xe,0x4f,
+0xe,0xa,0xe,0xf,0x1,0x33,0x18,0x0,0x0,0xe,0x4f,0x3,0xe,0x5a,0x11,
+0x5,0xe,0x5a,0x11,0x2,0xe,0x5b,0x11,0x0,0xe,0x5a,0x11,0x1,0xe,0x5a,
+0x11,0x0,0xe,0x1c,0x11,0x7,0xe,0x50,0xb,0xe,0x11,0x11,0x0,0xe,0x1d,
+0x11,0x1,0xe,0x5a,0x11,0x6,0xe,0x5a,0x11,0x5,0xe,0x18,0x11,0x34,0x11,
+0x3,0xb,0x11,0x2,0x11,0xc,0x3,0x5,0x0,0x0,0x0,0x1,0x36,0x18,0x0,
+0x0,0x1,0x35,0x18,0x0,0x0,0x1,0x34,0x18,0x0,0x0,0x1,0x33,0x18,0x0,
+0x0,0x3,0x2,0x0,0x0,0x0,0x11,0xd,0x1,0x32,0x18,0x0,0x0,0xe,0x24,
+0x11,0x5,0xe,0x5a,0x11,0x0,0xe,0x5a,0x11,0x1,0xe,0x1c,0x11,0x2,0xe,
+0x21,0x11,0xe,0xe,0x5b,0x11,0x2,0xe,0x21,0x11,0x8,0xe,0x5b,0x11,0x0,
+0xe,0x5b,0x11,0x1,0xe,0x62,0x11,0x0,0x11,0x2,0xe,0xb,0x11,0x1,0xe,
+0x4e,0x11,0x1,0xe,0x3b,0x11,0x0,0xe,0x41,0xe,0x42,0x11,0xb,0xe,0x5b,
+0x11,0x0,0xe,0x39,0x11,0x1,0xe,0x57,0x11,0x1,0x11,0x6,0x11,0x1,0xe,
+0x26,0x11,0x3,0xe,0x3b,0x11,0x0,0xe,0x23,0x11,0x1,0xe,0x3d,0x11,0x3,
+0xe,0x10,0x11,0x0,0xe,0x21,0x11,0x47,0xe,0x5a,0x11,0x4,0xe,0x5a,0x11,
+0x3,0xe,0x18,0x11,0x17,0x11,0x1,0xb,0x11,0x2,0x11,0x7,0x3,0x3,0x0,
+0x0,0x0,0x1,0x38,0x18,0x0,0x0,0x1,0x17,0x0,0x0,0x0,0x3,0x2,0x0,
+0x0,0x0,0x11,0xd,0x1,0x37,0x18,0x0,0x0,0xe,0x5b,0x11,0x0,0xe,0x21,
+0x11,0x4,0xe,0x62,0x11,0x1,0x11,0x0,0xe,0xd,0xe,0x39,0x11,0x0,0xe,
+0x22,0xe,0x57,0x11,0x2,0x11,0x1,0x11,0x2,0xe,0x3d,0x11,0x1,0xe,0xd,
+0xe,0x5a,0x11,0x2,0xe,0x5a,0x11,0x1,0xe,0x5a,0x11,0x0,0xe,0x18,0x11,
+0x1e,0x11,0x0,0xb,0x11,0x3,0x11,0x6,0x3,0x2,0x0,0x0,0x0,0x1,0x17,
+0x0,0x0,0x0,0x3,0x2,0x0,0x0,0x0,0x11,0xd,0x1,0x39,0x18,0x0,0x0,
+0xe,0x39,0x11,0x2,0xe,0x5,0x11,0x8,0xe,0x39,0x11,0x1,0xe,0x22,0xe,
+0xb,0x11,0x0,0xe,0x3d,0x11,0x0,0xe,0x39,0x11,0x2,0xe,0x55,0xe,0x39,
+0x11,0x2,0xe,0x56,0xe,0x39,0x11,0x0,0xe,0x22,0xe,0xb,0x11,0x2,0xe,
+0x3d,0x11,0x0,0xe,0xd,0xe,0x59,0x1,0x31,0x0,0x0,0x0,0x11,0x2,0xe,
+0x23,0x11,0x1,0xe,0x23,0x11,0x1,0xe,0x23,0x11,0x12,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x3a,0x1,0x3a,0x18,0x0,0x0,0xe,0x53,0x9,0xe,0xa,0xe,0xf,0x1,
+0x3a,0x18,0x0,0x0,0xe,0x4f,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,
+0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,0xe,0x29,
+0xe,0x29,0xe,0x29,0xe,0x3a,0x1,0x3b,0x18,0x0,0x0,0xe,0x53,0x9,0xe,
+0xa,0xe,0xf,0x1,0x3b,0x18,0x0,0x0,0xe,0x4f,
 };
