@@ -1,13 +1,22 @@
-(import (rnrs))
+(import (rnrs)
+        (mosh process))
+
+;; (if (fork)
+;;     (display "hige")
+;;     (display "hage"))
+
+;; (let-values ([(pid cin cout cerr) (spawn "ls" '("-l") (list #f #f #f))])
+;;   (waitpid pid))
 
 
-(define-syntax p
-  (lambda (x)
-  (syntax-case x ()
-    [(_ obj)
-     #'(call-with-values (lambda () obj) (lambda x (display x) (newline) (apply values x)))])))
-
-(p (values 1 2))
-(let-values (((a b) (p (values 1 2))))
-  (display (+ a b)))
-(p 1)
+(let-values ([(in out) (pipe)])
+  (define (port->string p)
+    (let loop ([ret '()][c (read-char p)])
+      (if (eof-object? c)
+          (list->string (reverse ret))
+          (loop (cons c ret) (read-char p)))))
+  (let-values ([(pid cin cout cerr) (spawn "ls" '("-l") (list #f out #f))])
+    (close-port out)
+    (write (port->string (transcoded-port in (make-transcoder (utf-8-codec)))))
+    (close-port in)
+    (waitpid pid)))
